--- a/P5_Narrow_Focus.Rmd
+++ b/P5_Narrow_Focus.Rmd
@@ -71,7 +71,68 @@ Restate research question 1. Construct 3-4 relevant visualizations that provide 
 # Research Question 2 (and possibly 3)
 
 Repeat the previous exercise for your second and possibly third research questions.
+```{r}
+# Load required library
+library(ggplot2)
 
+# Read the CSV file
+df <- read.csv("GSE_by_year/GSE_2014.csv")
+
+# Convert the 'service_date' column to Date format
+df$service_date <- as.Date(df$service_date)
+
+# Aggregate the data by date and calculate the sum of entries for each date
+df_sum <- aggregate(gated_entries ~ service_date, data = df, FUN = sum)
+
+# Create a line plot of sum of entries per date for all stations
+ggplot(df_sum, aes(x = service_date, y = gated_entries)) +
+  geom_line() +
+  labs(x = "Date", y = "Total Gated Entries",
+       title = "Total Gated Entries per Day for All Stations") +
+  theme_minimal() +
+  theme(aspect.ratio = 1 / 5)
+```
+```{r}
+
+# Extract month from the 'service_date' column
+df$month <- format(df$service_date, "%Y-%m")
+
+# Aggregate the data by month and calculate the sum of entries for each month
+df_sum <- df %>%
+  group_by(month) %>%
+  summarise(total_entries = sum(gated_entries))
+
+# Create a line plot of sum of entries per month for all stations
+ggplot(df_sum, aes(x = month, y = total_entries)) +
+  geom_line() +
+  labs(x = "Month", y = "Total Gated Entries",
+       title = "Total Gated Entries per Month for All Stations") +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+```
+```{r}
+library(dplyr)
+```
+```{r}
+# Extract month from the 'service_date' column
+df$month <- format(df$service_date, "%Y-%m")
+
+# Filter data for January
+df_january <- df[df$month == "2014-01", ]
+
+# Aggregate the data by station and calculate the sum of entries for January
+df_january_sum <- df_january %>%
+  group_by(station_name) %>%
+  summarise(total_entries = sum(gated_entries))
+
+# Create a bar graph of total entries in January for each station
+ggplot(df_january_sum, aes(x = station_name, y = total_entries)) +
+  geom_bar(stat = "identity", fill = "skyblue") +
+  labs(x = "Station Name", y = "Total Entries in January",
+       title = "Total Entries in January for Each Station") +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+```
 \
 
 # Next Steps
