--- a/P5_Narrow_Focus.Rmd
+++ b/P5_Narrow_Focus.Rmd
@@ -66,6 +66,19 @@ Identify the data sets you will use to explore the research questions above. The
 
 Restate research question 1. Construct 3-4 relevant visualizations that provide insight on / help answer this question and piece these together to tell a short story. For each visualization, 1-2 sentences will suffice.
 
+
+```{r}
+energy = read_csv("Fuel_and_Energy.csv")
+```
+```{r}
+by_fuel = energy %>% 
+  group_by(Fuel_Source) %>% 
+  summarize(total_miles = sum(Miles_Traveled), total_vol = sum(Volume))
+
+ggplot(by_fuel, aes(x=Fuel_Source, y=total_miles)) +
+  geom_col() + 
+  labs(title="Total Miles Traveled by Fuel Source, 2016-2019", x="Fuel Source", y="Miles Traveled")
+```
 \
 
 # Research Question 2 (and possibly 3)
