--- a/main.Rmd
+++ b/main.Rmd
@@ -26,8 +26,8 @@ pacman::p_load(
 API Keys: DO NOT COMMIT
 ```{r}
 # stadiamap
-register_stadiamaps("YOUR_API_KEY_HERE", write = TRUE)
-census_api_key("YOUR_API_KEY_HERE", install = TRUE)
+# register_stadiamaps("YOUR_API_KEY_HERE", write = TRUE)
+# census_api_key("YOUR_API_KEY_HERE")
 ```
 
 
@@ -588,9 +588,8 @@ summary(model)
 ```
 
 ```{r}
-station_populations22 <-
-  norm_station_populations22$norm_entries - norm_station_populations16$norm_entries
-boston_tract_location = as.data.frame(boston_tract_location)
+station_populations_16_22 <- norm_station_populations22
+station_populations_16_22$diff_norm_entry <- norm_station_populations22$norm_entries - norm_station_populations16$norm_entries
 diff_norm_station_entry <- ggplot() +
   geom_sf(data = boston_tract_location, color = NA, fill = "gray") +
   theme_void() +
@@ -598,19 +597,12 @@ diff_norm_station_entry <- ggplot() +
     legend.text = element_text(size = 4)
   ) +
   geom_point(
-    data = station_populations22,
+    data = station_populations_16_22,
     aes(x = lon, y = lat, fill = diff_norm_entry),
     color = "black",
     shape = 21
   ) +
   ggtitle("Difference in Light Rail Usage from 2016 - 2022") +
-  geom_point(
-    data = station_populations22,
-    aes(x = lon, y = lat, fill = diff_norm_entry),
-    color = "black",
-    shape = 21,
-    size = 3
-  ) +
   scale_fill_gradient(low = "red", high = "yellow", na.value = NA)
 
 diff_norm_station_entry
