--- a/main.Rmd
+++ b/main.Rmd
@@ -557,7 +557,24 @@ ggplot(filtered_data) +
   ylab('filtered normalized gated entries')
 ```
 ## Regression on Gated Entry vs race
+```{r}
+# Filter data for entries more than 125 (outliers)
+filtered_data <- subset(station_race16, norm_entries < 125)
+# Filter data for income more than 125000 (too less data points)
+filtered_data <- subset(filtered_data, race == "Black")
 
+lm_entry_income_filtered <- lm(norm_entries ~ percent, data = station_race16)
+summary(lm_entry_income_filtered)
+
+library(ggplot2)
+# Plotting
+ggplot(filtered_data) +
+  geom_point(aes(percent, norm_entries)) +
+  geom_line(aes(percent, predict(lm_entry_income_filtered, newdata = filtered_data))) +
+  ggtitle('Normalized Gated Entries vs. Race') +
+  xlab('How White')+
+  ylab('filtered normalized gated entries')
+```
 ```{r}
 lm_entry_income <- lm(norm_entries ~ race, data = station_race16)
 summary(lm_entry_income)
