add new graph for ridership visuals

--- a/main.Rmd
+++ b/main.Rmd
@@ -497,12 +497,13 @@ norm_station_entry_22 <- ggplot() +
   ) +
   geom_point(
     data = norm_station_populations22,
-    aes(x = lon, y = lat, size = norm_entries),
+    aes(x = lon, y = lat, fill = norm_entries),
     color = "black",
-    fill = "blue",
+    size = 3,
     shape = 21
   ) +
-  ggtitle("Normalized Lightrail Station Entry 2022")
+  ggtitle("Normalized Lightrail Station Entry 2022")+
+  scale_fill_gradientn(colours = c("red", "purple", "blue"), values = c(0, 0.2, 1), na.value = NA, name = "entry per person")
 
 norm_station_entry_22
 ```
@@ -516,12 +517,13 @@ norm_station_entry_16 <- ggplot() +
   ) +
   geom_point(
     data = norm_station_populations16,
-    aes(x = lon, y = lat, size = norm_entries),
+    aes(x = lon, y = lat, fill = norm_entries),
     color = "black",
-    fill = "blue",
+    size = 3,
     shape = 21
   ) +
-  ggtitle("Normalized Lightrail Station Entry 2016")
+  ggtitle("Normalized Lightrail Station Entry 2016")+
+  scale_fill_gradientn(colours = c("red", "purple", "blue"), values = c(0, 0.1, 1), na.value = NA, name = "entry per person")
 
 norm_station_entry_16
 ```
@@ -594,7 +596,7 @@ station_populations_16_22 <- norm_station_populations22 %>%
 for (i in 1:length(station_populations_16_22$station_name)){
   norm_entry_16 <- norm_station_populations16$norm_entries[norm_station_populations16$station_name == station_populations_16_22$station_name[i]]
   norm_entry_22 <- station_populations_16_22$norm_entries
-  station_populations_16_22$diff_norm_entry[i] <- (norm_entry_22 - norm_entry_16) / norm_entry_16 * 100
+  station_populations_16_22$diff_norm_entry[i] <- (norm_entry_22 - norm_entry_16)
 }
   
 
@@ -605,14 +607,43 @@ diff_norm_station_entry <- ggplot() +
     data = station_populations_16_22,
     aes(x = lon, y = lat, fill = diff_norm_entry),
     color = "black",
-    shape = 21
+    shape = 21,
+    size = 3
   ) +
-  ggtitle("Difference in Light Rail Usage from 2016 - 2022") +
-  scale_fill_gradient2(low = "red", mid = "yellow", high = "green", midpoint = 200, na.value = NA, name = "Percentage of Rider Increase in 2022")
+  ggtitle("Difference in Light Rail Usage from 2016 - 2022") + 
+  scale_fill_gradientn(colours = c("red", "yellow", "green"), values = c(0, 0.9875, 1), na.value = NA, name = "# of Rider Increase in 2022")
 
 diff_norm_station_entry
 ```
 
+```{r}
+station_populations_16_22$increase_usage <- (station_populations_16_22$diff_norm_entry > 0)
+
+diff_norm_station_entry <- ggplot() +
+  geom_sf(data = boston_tract_location, color = NA, fill = "gray") +
+  theme_void() +
+  geom_point(
+    data = station_populations_16_22,
+    aes(x = lon, y = lat, fill = increase_usage),
+    color = "black",
+    shape = 21,
+    size = 3
+  ) +
+  ggtitle("Whether Usage of Station Increased from 2016 - 2022")
+
+diff_norm_station_entry
+```
+
+
+```{r}
+ggplot(station_populations_16_22) + 
+  geom_col(aes(x = fct_reorder(station_name, diff_norm_entry), y = diff_norm_entry, fill = diff_norm_entry))+
+  theme(axis.text.x=element_blank(),
+        axis.ticks.x=element_blank())+
+  xlab("stations") + 
+  ylab("difference in usage between 2016 and 2022")+ 
+  scale_fill_gradientn(colours = c("red", "yellow", "green"), values = c(0, 0.9875, 1), na.value = NA, name = "# of extra Rider Increase in 2022")
+```
 
 
 
